<resources>
    <string name="app_name">mob-dev-portfolio</string>
    <string name="gallery">Gallery</string>
    <string name="appointments">Appointments</string>
    <string name="activity">Activity</string>
    <string name="pets">Pets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pet_fragment">Pet Fragment</string>
    <string name="title_activity_add_pet">AddPetActivity</string>
    <string name="breed">Breed</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="pet_type">Pet Type</string>
    <string name="name">Name</string>
    <string name="add_pet">Add Pet</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="pet_added">Pet added!</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="petname">petName</string>
    <string name="petbreed">petBreed</string>
    <string name="choose_image">Choose Image</string>
    <string name="no_media_selected">No media selected</string>
    <string name="your_pets">Your Pets</string>
    <string name="photo_s_added">Photo(s) added!</string>
    <string name="pet_gallery">Pet Gallery</string>
    <string name="title_activity_photo_view">PhotoViewActivity</string>
    <string name="give_your_photo_a_name">Give your photo a name!</string>
    <string name="change_name">Change Name</string>
    <string name="submit">SUBMIT</string>
    <string name="edit_name">Edit Name</string>
    <string name="meals">Meals</string>
    <string name="walks">Walks</string>
    <string name="select_a_date">Select a date</string>
    <string name="MY_API_KEY">AIzaSyD_zTotsZX5A9y3CVs7iv598W-rd-kt4t0</string>
    <string name="select_your_walk_route">Select your walk route</string>
    <string name="addwalkactivity">AddWalkActivity</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="no_pictures_selected">No pictures selected</string>
    <string name="walk_name">Walk Name</string>
    <string name="add_walk">Add Walk</string>
    <string name="walk_time">Walk Time</string>
    <string name="walk_date">Walk Date</string>
    <string name="walk_added">Walk added!</string>
    <string name="remember_to_fill_in_all_fields">Remember to fill in all fields!</string>
    <string name="please_go_back">Please go back.</string>
    <string name="no_pets_in_database">No pets in database!</string>
    <string name="_13_30">13:30</string>
    <string name="_10_03_2025">10/03/2025</string>
    <string name="walk_with_john_at_beaufort">Walk with John at Beaufort</string>
    <string name="textview">TextView</string>
    <string name="title_activity_view_walk">ViewWalkActivity</string>
    <string name="meal_name">Meal Name</string>
    <string name="addmealactivity">AddMealActivity</string>
    <string name="add_meal">Add Meal</string>
    <string name="date_of_birth_colon">Date of Birth:</string>
    <string name="gender_colon">Gender:</string>
    <string name="pet_type_colon">Pet Type:</string>
    <string name="delete">Delete</string>
    <string name="pet_deleted">Pet deleted</string>
</resources>